--- a/index.html
+++ b/index.html
@@ -137,10 +137,35 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-8 col-xl-6 text-center">
-                        <h2 class="mt-0">오시는길</h2>
+                        <h2 class="mt-0">결혼식장</h2>
                         <hr class="divider" />
+                        <h5 class="mb-4">광주광역시 남구 임암길 181, 어반브룩</h5>
                         <div class="my-3">
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3264.2078893749413!2d126.86528937576207!3d35.101519472779934!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x35718a1f3dc38f55%3A0x1f60b06727a9c262!2z7Ja067CY67iM66Op!5e0!3m2!1sko!2skr!4v1704810190174!5m2!1sko!2skr" width="100%" height="400" style="border:0;" allowfullscreen="""></iframe>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3264.198599994271!2d126.86383631119747!3d35.10175146147546!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357189f53753e639%3A0x7b34bffdf19547fc!2z6rSR7KO86rSR7Jet7IucIOuCqOq1rCDsnoTslZTquLggMTgx!5e0!3m2!1sko!2skr!4v1704893912910!5m2!1sko!2skr" width="100%" height="450" style="border:0;" allowfullscreen="" ></iframe>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- map-->
+        <section class="page-section">
+            <div class="container px-4 px-lg-5">
+                <div class="row gx-4 gx-lg-5 justify-content-center">
+                    <div class="col-lg-8 col-xl-6 text-center">
+                        <h2 class="mt-0">일상 사진</h2>
+                        <hr class="divider" />
+                        <div class="mt-1">
+                            <img alt="Couple" class="img-fluid" src="assets/img/p_1.jpg"/>
+                        </div>
+                        <div class="mt-1">
+                            <img alt="Couple" class="img-fluid" src="assets/img/p_2.jpg"/>
+                        </div>
+                        <div class="mt-1">
+                            <img alt="Couple" class="img-fluid" src="assets/img/p_3.jpg"/>
+                        </div>
+                        <div class="mt-1">
+                            <img alt="Couple" class="img-fluid" src="assets/img/p_4.jpg"/>
                         </div>
                     </div>
                 </div>
